# seq_optimizer

./: .gitignore  Cargo.toml  LICENSE  MANIFEST.in  README.md  pyproject.toml  setup.py
benchmark/: algorithm.py  bench_sequence.py  bench_thread.py  plot.py  utils.py
seq_optimizer/: __init__.py
src/: filter_special_tokens.rs  lib.rs  longest_common.rs
tests/: test.py  test_filter_special_tokens.py  test_longest_common.py
