[project]
name = "seq_optimizer"
version = "0.1.0"
description = "A Rust-based Python package for sequence optimization"
readme = "README.md"
license = {file = "LICENSE"}
authors = [{name = "Rungrod Thongjampa"}, {email = "rungrodks@hotmail.com"}]
requires-python = ">=3.10"

[project.urls]
homepage = "https://github.com/rungrodkspeed/seq_optimizer"
repository = "https://github.com/rungrodkspeed/seq_optimizer"

[build-system]
build-backend = "setuptools.build_meta"
requires = ["setuptools>=62.4", "wheel", "setuptools-rust>=1.5.2"]

[tool.cibuildwheel]
build-frontend = "build"
build-verbosity = 1

linux.before-all = "curl --proto '=https' --tlsv1.2 -sSf https://sh.rustup.rs | sh -s -- -y"
linux.environment = { PATH = "$PATH:$HOME/.cargo/bin" }
macos.before-all = "rustup target add aarch64-apple-darwin x86_64-apple-darwin"

skip = [
  "*-manylinux_i686",
  "*-musllinux_i686",
  "*-win32",
  "*-musllinux_aarch64",
]
macos.archs = ["x86_64", "arm64"]
# When cross-compiling on Intel, it is not possible to test arm64 wheels.
# Warnings will be silenced with following CIBW_TEST_SKIP
test-skip = "*-macosx_arm64"

[[tool.cibuildwheel.overrides]]
select = "*linux_aarch64"